Set up application.html.erb and restaurant index

--- a/tofumine/app/views/restaurants/index.html.erb
+++ b/tofumine/app/views/restaurants/index.html.erb
@@ -1,1 +1,7 @@
-hello
+<h1>Restaurants</h1>
+<ul>
+  <% @restaurants.each do |restaurant| %>
+    <li><%= link_to restaurant, restaurant_path(restaurant) %></li>
+  <% end %>
+</ul>
+
